data/forge_javadoc/1.7.10/processed/net_minecraft_util_ChatComponentTranslation.md
# ChatComponentTranslation

**Inheritance:** java.lang.Object → net.minecraft.util.ChatComponentStyle → net.minecraft.util.ChatComponentTranslation

## Class signature

```java
public class ChatComponentTranslation extends ChatComponentStyle
```

## Constructors

- `ChatComponentTranslation(java.lang.String p_i45160_1_, java.lang.Object... p_i45160_2_)`

## Methods

- `ChatComponentTranslation createCopy()`
- `boolean equals(java.lang.Object p_equals_1_)`
- `java.lang.Object[] getFormatArgs()`
- `java.lang.String getKey()`
- `java.lang.String getUnformattedTextForChat()`
- `int hashCode()`
- `protected void initializeFromFormat(java.lang.String p_150269_1_)`
- `java.util.Iterator iterator()`
- `IChatComponent setChatStyle(ChatStyle p_150255_1_)`
- `java.lang.String toString()`

## Fields

- `static java.util.regex.Pattern stringVariablePattern`